--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>I like web stuff!!</h1>
+    <h3>Favorite Foods</h3>
+    <ul>
+        <li>Enchiladas</li>
+        <li>Tofu Fried Rice</li>
+        <li>Cheese Pizza</li>
+    </ul>
 </body>
 </html>
